fix z-index

--- a/popup/style.css
+++ b/popup/style.css
@@ -22,7 +22,7 @@ a:hover {
   padding-top: 8px;
   width: 100%;
   background-color: #fff;
-  z-index: 9;
+  z-index: 999;
   overflow-x: auto;
 }
 
